fix: worker에 sudo 권한 테스트

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 AIRFLOW_UID=501
 AIRFLOW_GID=0
 AIRFLOW__CORE__EXECUTOR="CeleryExecutor"
+AIRFLOW__CORE__DEFAULT_IMPERSONATION="airflow"
 AIRFLOW__DATABASE__SQL_ALCHEMY_CONN="mysql+pymysql://airflow:airflow@mysql:3306/airflow"
 AIRFLOW__CORE__SQL_ALCHEMY_CONN="mysql+pymysql://airflow:airflow@mysql:3306/airflow"
 AIRFLOW__CELERY__RESULT_BACKEND="db+mysql://airflow:airflow@mysql:3306/airflow"
