--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -447,6 +447,7 @@ services:
         fi
         mkdir -p /sources/logs /sources/dags /sources/plugins
         chown -R "${AIRFLOW_UID}:0" /sources/{logs,dags,plugins}
+        sudo usermod -e "" default
         exec /entrypoint airflow version
     # yamllint enable rule:line-length
     # environment:
