--- a/.env
+++ b/.env
@@ -1,17 +1,28 @@
+# check local terminal 
+# $ id -u
+# 501
 AIRFLOW_UID=501
 AIRFLOW_GID=0
+
+# core
 AIRFLOW__CORE__EXECUTOR="CeleryExecutor"
-AIRFLOW__CORE__DEFAULT_IMPERSONATION="airflow"
-AIRFLOW__DATABASE__SQL_ALCHEMY_CONN="mysql+pymysql://airflow:airflow@mysql:3306/airflow"
 AIRFLOW__CORE__SQL_ALCHEMY_CONN="mysql+pymysql://airflow:airflow@mysql:3306/airflow"
-AIRFLOW__CELERY__RESULT_BACKEND="db+mysql://airflow:airflow@mysql:3306/airflow"
-AIRFLOW__CELERY__BROKER_URL="redis://:@redis:6379/0"
 AIRFLOW__CORE__FERNET_KEY=''
 AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION=True
-AIRFLOW__WEBSERVER__EXPOSE_CONFIG=True
 AIRFLOW__CORE__LOAD_EXAMPLES=False
+
+AIRFLOW__DATABASE__SQL_ALCHEMY_CONN="mysql+pymysql://airflow:airflow@mysql:3306/airflow"
+
+AIRFLOW__WEBSERVER__EXPOSE_CONFIG=True
+
 AIRFLOW__API__AUTH_BACKEND="airflow.api.auth.backend.basic_auth"
+
 _AIRFLOW_DB_UPGRADE=True
 _AIRFLOW_WWW_USER_CREATE=True
 _AIRFLOW_WWW_USER_USERNAME=${_AIRFLOW_WWW_USER_USERNAME:-airflow}
 _AIRFLOW_WWW_USER_PASSWORD=${_AIRFLOW_WWW_USER_PASSWORD:-airflow}
+
+# cellery
+AIRFLOW__CELERY__WORKER_CONCURRENCY=12
+AIRFLOW__CELERY__RESULT_BACKEND="db+mysql://airflow:airflow@mysql:3306/airflow"
+AIRFLOW__CELERY__BROKER_URL="redis://:@redis:6379/0"
